# askdocs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md  NLP.md
docs/corpus/cpp/: classes.adoc  pointers.adoc  variables.adoc  vectors.adoc
docs/corpus/python/: for-loops.adoc  functions.adoc  list-comprehensions.adoc  variables.adoc
include/askdocs/: app.hpp  app_options.hpp  chat_panel.hpp  command.hpp  editor_view.hpp  explorer.hpp  file_io.hpp  input_handler.hpp  layout.hpp  syntax.hpp  terminal.hpp  tutor_service.hpp  types.hpp  utf8.hpp
include/askdocs/agent/: concept_learner.hpp  context_agent.hpp  context_buffer.hpp  file_index.hpp  learning_path.hpp  line_analyzer.hpp
include/askdocs/docs/: online_search.hpp  response_parsers.hpp
include/askdocs/nlp/: intent.hpp  tokenizer.hpp
landingpage/: README.md  cookies.html  data-collection.html  index.html  privacy.html  terms.html
landingpage/css/: style.css
landingpage/screenshots/: README.txt
scripts/: install.sh
src/: app.cpp  chat_panel.cpp  command.cpp  editor_view.cpp  explorer.cpp  file_io.cpp  input_handler.cpp  layout.cpp  main.cpp  syntax.cpp  terminal.cpp  tutor_service.cpp  types.cpp  utf8.cpp
src/agent/: concept_learner.cpp  context_agent.cpp  context_buffer.cpp  file_index.cpp  learning_path.cpp  line_analyzer.cpp
src/docs/: online_search.cpp  response_parsers.cpp
src/nlp/: intent_net.cpp  tokenizer.cpp
